Add amdin creation endpoints